external-crates/move/crates/move-compiler/tests/haneul_mode/id_leak/private_pack.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: haneul
  edition: legacy
  lint: false
input_file: crates/move-compiler/tests/haneul_mode/id_leak/private_pack.move
---
error[E04001]: restricted visibility
   ┌─ tests/haneul_mode/id_leak/private_pack.move:19:9
   │
 5 │     struct A has key {
   │            - Struct defined in module 'a::a'
   ·
19 │         A { id }
   │         ^^^^^^^^ Struct 'a::a::A' can only be instantiated within its defining module 'a::a'
